<?xml version="1.0" encoding="utf-8"?>

<merge>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="3"
            android:contentDescription="@string/handBallLogo"
            android:scaleType="fitCenter"
            android:src="@drawable/hand_ball_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="0.8"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/whoIsPlaying"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:hint="@string/enterTeam1"
            android:inputType="text"
            android:maxLength="12" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="2"
            android:contentDescription="@string/vs"
            android:scaleType="fitCenter"
            android:src="@drawable/vs" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:hint="@string/enterTeam2"
            android:inputType="text"
            android:maxLength="12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1.5"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/startGame" />
        </LinearLayout>

    </LinearLayout>
</merge>