<?xml version="1.0" encoding="utf-8"?>

<merge>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/handBallLogo"
            android:scaleType="fitCenter"
            android:src="@drawable/hand_ball_logo" />

        <TextView
            android:id="@+id/winnerTeamTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/winnerTeam"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="47sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/isTheWinner"
            android:textColor="@android:color/black"
            android:textSize="50sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/restartApp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>
</merge>