<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--This is Welcome Screen:-->
    <LinearLayout
        android:id="@+id/welcomeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="32dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="3"
            android:contentDescription="@string/handBallLogo"
            android:scaleType="fitCenter"
            android:src="@drawable/hand_ball_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="0.8"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/whoIsPlaying"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/team1NameEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:hint="@string/enterTeam1"
            android:inputType="text"
            android:maxLength="12" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="2"
            android:contentDescription="@string/vs"
            android:scaleType="fitCenter"
            android:src="@drawable/vs" />

        <EditText
            android:id="@+id/team2NameEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:hint="@string/enterTeam2"
            android:inputType="text"
            android:maxLength="12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1.5"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/startTheGameButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/startGame" />
        </LinearLayout>

    </LinearLayout>


    <!--This is Main Score Screen:-->
    <LinearLayout
        android:id="@+id/mainScoreLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team1NameTextView"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/team1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"

                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/handBallLogo"


                android:scaleType="fitCenter"
                android:src="@drawable/hand_ball_logo2" />


            <TextView
                android:id="@+id/team2NameTextView"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/team2"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"

            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team1TotalScoreTextView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"

                android:text="@string/total_scores"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team2TotalScoreTextView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"

            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team1PenaltyScoreTextView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="56dp"
                android:layout_marginRight="56dp"

                android:text="@string/penalty_scores"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team2PenaltyScoreTextView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"

            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team1FoulsTextView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="89dp"
                android:layout_marginRight="89dp"

                android:text="@string/fouls"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team2FoulsTextView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/teamAPlus1ScoreButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plus1Score" />

                <Button
                    android:id="@+id/teamAPlus1PenaltyScoreButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plus1PenaltyScore" />

                <Button
                    android:id="@+id/teamAPlus1FoulButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plus1Foul" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/teamAMinus1ScoreButton"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minusOne" />

                <Button
                    android:id="@+id/teamAMinus1PenaltyScoreButton"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minusOne" />

                <Button
                    android:id="@+id/teamAMinus1FoulButton"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minusOne" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/teamBPlus1ScoreButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plus1Score" />

                <Button
                    android:id="@+id/teamBPlus1PenaltyScoreButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plus1PenaltyScore" />

                <Button
                    android:id="@+id/teamBPlus1FoulButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plus1Foul" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/teamBMinus1ScoreButton"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minusOne" />

                <Button
                    android:id="@+id/teamBMinus1PenaltyScoreButton"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minusOne" />

                <Button
                    android:id="@+id/teamBMinus1FoulButton"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minusOne" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/endGameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gameEnded" />

            <Button
                android:id="@+id/resetScoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetGame" />

        </LinearLayout>
    </LinearLayout>


    <!--This is Winner Screen:-->
    <LinearLayout
        android:id="@+id/winnerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="32dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/handBallLogo"
            android:scaleType="fitCenter"
            android:src="@drawable/hand_ball_logo" />

        <TextView
            android:id="@+id/winnerTeamTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/winnerTeam"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="47sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/winnerPhraseTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/isTheWinner"
            android:textColor="@android:color/black"
            android:textSize="50sp" />

        <Button
            android:id="@+id/restartAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/restartApp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>